2022-01-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode-maybe-enable)
	(ebuild-mode-menu): Quote lisp symbols in docstrings.

2021-12-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.54 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2021-12-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Use same fill-column and
	tab-width as ebuild-mode.

2021-09-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	New keyword @PROVIDES.

2021-07-12  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.53 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2021-07-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-log-buffer-mode): New variable.
	(ebuild-run-command): Use it.

2021-07-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-eapi-list): Add EAPI 8.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi-deprecated)
	(ebuild-mode-keywords-0): hasv is banned.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	New keywords @DEPRECATED and @SUBSECTION.

2021-04-07  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu): Declare.
	This fixes a byte-compile warning in XEmacs.
	* ebuild-mode.el (ebuild-repo-mode-hook)
	(ebuild-repo-mode-on-hook, ebuild-repo-mode-off-hook): Ditto.

	* gentoo-newsitem-mode.el (gentoo-newsitem-mode): Make easymenu
	work with XEmacs.

	* ebuild-mode.el (ebuild-mode): Fix byte-compile warning in
	Emacs 28.

2021-03-20  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.52 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-delete-cvs-line): Change default
	to nil.

2021-03-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el: Fix byte-compile warnings.
	(ebuild-mode-make-keywords-list): Test if delete-duplicates
	is bound.